Animplayer extreme zooms in when playing rendered animation. #59177

Closed
opened 2018-12-11 11:31:55 +01:00 by Erick Tukuniata · 14 comments

System Information
Operating system: Win7
Graphics card: gtx 550ti

Blender Version
Broken: Blender2.8 hash 9fa408f51b

(example: 2.80, edbf15d3c0, blender2.8, 2018-11-28, as found on the splash screen)
Worked: (optional)

Short description of error
Blenderplayer extreme zooms in when playing rendered animation.

Exact steps for others to reproduce the error
play_anim.blend
Open the .blend file above and:

  • may be you want to change the output file location
  • do ctrl+f12 to render the animation
  • when the animation is finished rendering play it (ctrl+f11)
    Notice that blender player doesn't play according to your camera position, somehow the player is zoomed in, notice Suzanne is cut out. But VLC can play the animation pretty well.
**System Information** Operating system: Win7 Graphics card: gtx 550ti **Blender Version** Broken: Blender2.8 hash 9fa408f51b7 (example: 2.80, edbf15d3c044, blender2.8, 2018-11-28, as found on the splash screen) Worked: (optional) **Short description of error** Blenderplayer extreme zooms in when playing rendered animation. **Exact steps for others to reproduce the error** [play_anim.blend](https://archive.blender.org/developer/F5919566/play_anim.blend) Open the .blend file above and: - may be you want to change the output file location - do ctrl+f12 to render the animation - when the animation is finished rendering play it (ctrl+f11) Notice that blender player doesn't play according to your camera position, somehow the player is zoomed in, notice Suzanne is cut out. But VLC can play the animation pretty well.

Added subscriber: @ErickNyanduKabongo

Added subscriber: @ErickNyanduKabongo

Added subscribers: @brecht, @ZedDB

Added subscribers: @brecht, @ZedDB

It works fine for me, however it seems like the blender built in player lacks scaling, so if I playback a 1080p video on a 1080p monitor, I have to make sure that the player window is fullscreen or the video will be cropped.

@brecht is this bug or not?

It works fine for me, however it seems like the blender built in player lacks scaling, so if I playback a 1080p video on a 1080p monitor, I have to make sure that the player window is fullscreen or the video will be cropped. @brecht is this bug or not?

In #59177#605175, @ZedDB wrote:
It works fine for me, however it seems like the blender built in player lacks scaling, so if I playback a 1080p video on a 1080p monitor, I have to make sure that the player window is fullscreen or the video will be cropped.

This is a problem we didn't have in Blender 2.79

> In #59177#605175, @ZedDB wrote: > It works fine for me, however it seems like the blender built in player lacks scaling, so if I playback a 1080p video on a 1080p monitor, I have to make sure that the player window is fullscreen or the video will be cropped. > This is a problem we didn't have in Blender 2.79
Sergey Sharybin was assigned by Sebastian Parborg 2019-01-23 22:47:34 +01:00

For the record, this isn't a blenderplayer, this is animplayer (confusing, but historically blenderplayer is the game engine thing).

For me the behavior between 2.79b and current 2.8 is exactly the same. So if the issue is about lack of scaling/scrolling in the animplayer then it's just a missing feature than a bug.

@ErickNyanduKabongo, does the video play correct for you if you open in in a clip editor? Does it play correct if you maximize the player window?

@ZedDB, did you verify that the 2.79 behavior is different for you?

For the record, this isn't a blenderplayer, this is animplayer (confusing, but historically blenderplayer is the game engine thing). For me the behavior between 2.79b and current 2.8 is exactly the same. So if the issue is about lack of scaling/scrolling in the animplayer then it's just a missing feature than a bug. @ErickNyanduKabongo, does the video play correct for you if you open in in a clip editor? Does it play correct if you maximize the player window? @ZedDB, did you verify that the 2.79 behavior is different for you?
Sergey Sharybin changed title from Blenderplayer extreme zooms in when playing rendered animation. to Animplayer extreme zooms in when playing rendered animation. 2019-01-24 09:34:22 +01:00

@Sergey I did try it. However I forgot about one silly thing. 2.79 renders the animation at 50% resolution per default. So I just rendered out the default cube scene and played it back.
I'm using a tiling WM, so the new window opened up at 50% of my screen so the video was show as full. I then toggled the window fullscreen and the blender player scaled the image.

So I thought that scaling was working. And because the reporter said that it should be working in 2.79, I didn't think I had any reason to doubt that after doing this quick test.
Looking at it again now it seems to only be able to scale up and only integer scaling, so my bad.

@Sergey I did try it. However I forgot about one silly thing. 2.79 renders the animation at 50% resolution per default. So I just rendered out the default cube scene and played it back. I'm using a tiling WM, so the new window opened up at 50% of my screen so the video was show as full. I then toggled the window fullscreen and the blender player scaled the image. So I thought that scaling was working. And because the reporter said that it should be working in 2.79, I didn't think I had any reason to doubt that after doing this quick test. Looking at it again now it seems to only be able to scale up and only integer scaling, so my bad.

This issue was referenced by 9eee2aa20c

This issue was referenced by 9eee2aa20c7b5d29e76f023771f9c27002292804

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Did some fixes for zooming. Now Ctrl +/- can be used to zoom out the image which doesn't fit.

This is not ideal at all, but for smoother experience the player needs to have some internals redone (there is a feedback loop between zoom level and window size, which is tricky to deal with).

Did some fixes for zooming. Now Ctrl +/- can be used to zoom out the image which doesn't fit. This is not ideal at all, but for smoother experience the player needs to have some internals redone (there is a feedback loop between zoom level and window size, which is tricky to deal with).

Hello Sergey,

does the video play correct for you if you open in in a clip editor? Does it play correct if you maximize the player window?

Yes it does play correctly. But the problem is that with a heavy scene (high multires. objects), animation plays poorly in Blender viewport, my workflow is: crtl+12, go for a short stretch till the render(play blast) is finished and crtl+11 to see if there some stuffs (timing and spacing) to fix then fix and again ctrl+12 and so... This bug is making the all process painful.

Did some fixes for zooming. Now Ctrl +/- can be used to zoom out the image which doesn't fit.

I tried this and it zoomed out only once and then nothing here is what i got after ctrl- animPlayerBug.png Suzanne is still cropped. :(

Hello Sergey, > does the video play correct for you if you open in in a clip editor? Does it play correct if you maximize the player window? Yes it does play correctly. But the problem is that with a heavy scene (high multires. objects), animation plays poorly in Blender viewport, my workflow is: crtl+12, go for a short stretch till the render(play blast) is finished and crtl+11 to see if there some stuffs (timing and spacing) to fix then fix and again ctrl+12 and so... This bug is making the all process painful. > Did some fixes for zooming. Now Ctrl +/- can be used to zoom out the image which doesn't fit. I tried this and it zoomed out only once and then nothing here is what i got after ctrl- ![animPlayerBug.png](https://archive.blender.org/developer/F6392236/animPlayerBug.png) Suzanne is still cropped. :(

I don't think current builds from buildot do include my fix from today. Without it it will not work indeed.
Do you mind testing with the next build? (will be available later tonight. So maybe wait for until tomorrow, give it a test, and let us know how it goes).

I don't think current builds from buildot do include my fix from today. Without it it will not work indeed. Do you mind testing with the next build? (will be available later tonight. So maybe wait for until tomorrow, give it a test, and let us know how it goes).

In #59177#606333, @Sergey wrote:
I don't think current builds from buildot do include my fix from today. Without it it will not work indeed.
Do you mind testing with the next build? (will be available later tonight. So maybe wait for until tomorrow, give it a test, and let us know how it goes).

I build it ;) I will check tomorrow as well :)

> In #59177#606333, @Sergey wrote: > I don't think current builds from buildot do include my fix from today. Without it it will not work indeed. > Do you mind testing with the next build? (will be available later tonight. So maybe wait for until tomorrow, give it a test, and let us know how it goes). I build it ;) I will check tomorrow as well :)

Interesting. Can you try resizing window manually to a smaller size and see if that allows you to zoom out more?

Could be something OS related, was only testing on Linux. Can fire on Window box tomorrow and see how that works.

Interesting. Can you try resizing window manually to a smaller size and see if that allows you to zoom out more? Could be something OS related, was only testing on Linux. Can fire on Window box tomorrow and see how that works.

In #59177#606363, @Sergey wrote:
Interesting. Can you try resizing window manually to a smaller size and see if that allows you to zoom out more?

Could be something OS related, was only testing on Linux. Can fire on Window box tomorrow and see how that works.

Since our Docta mentioned the word "Interesting", this made me question everything i was doing, so rebuild Blender again and now it is working pretty well after rendering, i did ctrl+11 and ctrl- ( works many times now) This is the new render animPlayerBug_1.png

For me you can close this task. Thank a lot :)

> In #59177#606363, @Sergey wrote: > Interesting. Can you try resizing window manually to a smaller size and see if that allows you to zoom out more? > > Could be something OS related, was only testing on Linux. Can fire on Window box tomorrow and see how that works. Since our Docta mentioned the word "Interesting", this made me question everything i was doing, so rebuild Blender again and now it is working pretty well after rendering, i did ctrl+11 and ctrl- ( works many times now) This is the new render ![animPlayerBug_1.png](https://archive.blender.org/developer/F6392782/animPlayerBug_1.png) For me you can close this task. Thank a lot :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59177
No description provided.